--- a/Subneteo/subneteo.css
+++ b/Subneteo/subneteo.css
@@ -31,19 +31,23 @@ header h1
         justify-content: center;
         padding: 2rem;
     }
-main
+main .container
     {
-        width: auto;
-        height: auto;
         display: flex;
+        flex-wrap: wrap;
+    }
+main .container .content
+    {
+        width: 100%;
+        min-width: 150px;
+        height: 240px;
     }
 main .main-view-left
     {
-        width: 50%;    
+        background-color: aqua;    
     }
 main .main-view-right
     {
-        width: 50%;
         background-color:violet;
     }
 main .main-view-left .main-view-left__form
@@ -71,3 +75,41 @@ main .main-view-left .main-view-left__form label input:focus
         transition: .1s;
         transition-property: box-shadow;
     } */
+@media (min-width: 600px)
+    {
+        .container
+            {
+                display: flex;
+                justify-content: center;
+            }
+        main .container .main-view-left
+            {
+                order: 1;
+                width: 45%;
+
+            }
+        main .container .main-view-right
+            {
+                order: 2;
+                width: 45%;
+            }
+    }
+@media (min-width: 800px)
+    {
+        .container
+            {
+                max-width: 800px;
+                margin-left: auto;
+                margin-right: auto;
+            }
+        main .container .main-view-left
+            {
+                width: 50%;
+                order: 1;
+            }
+        main .container .main-view-right
+            {   
+                width: 50%;
+                order: 2;
+            }
+    }
