--- a/style/stylesHaziel.css
+++ b/style/stylesHaziel.css
@@ -4,18 +4,21 @@
 :root {
     --neon-button: hsl(144, 100%, 50%);
     --neon-shadow-text: rgb(255, 1, 174);
+    --card-background: rgba(15, 1, 26, 0.963);
 }
 
 * {
     padding: 0;
     margin: 0;
+    text-decoration: none;
     box-sizing: border-box;
     font-size: 11px;
 }
 
 body {
-    padding-top: 5em;
-    background-image: url(/Images/Speedline-100s-1634px.svg);
+    padding-top: 9em;
+    color: #fff;
+    background-image: url(/Images/background-loading.svg);
     background-size: cover;
     font-family: 'Mukta-regular', sans-serif;
     text-align: center;
@@ -61,24 +64,19 @@ main {
     text-align: justify;
 }
 
-.cards {
-    box-shadow: 2px 0.8rem 1rem, rgba(0, 0, 0, 0.25);
-    display: grid;
-    grid-template-columns: auto auto;
+main p, b {
+    font-size: 16px;
 }
 
-@media screen and (min-width: 37.5rem) {
-    .card {
-        display: grid;
-        grid-auto-flow: column;
-        max-width: 75rem;
-
-    }
-}
 
 /* Class for neon buttons in HTML*/
+.div-neon-button {
+    padding-top: 1.25em;
+    padding-bottom: 1.25em;
+}
+
 .neon-button {
-    font-size: 1em;
+    font-size: 1.15em;
     font-weight: 600;
 
     color: var(--neon-button);
@@ -121,11 +119,35 @@ main {
 }
 
 /* Define layout page with CSS Grid*/
+
 .cards {
     display: grid;
     grid-template-columns: auto auto;
-    padding-top: 3em;
-    padding-bottom: 3em;
+    width: 100%;
+}
+
+.card {
+    background-color: var(--card-background);
+    border-radius: 0.5em;
+    margin: 1em 1.5em 1em 1.5em;
+}
+
+.card p {
+    text-align: justify;
+    padding: 1em 1.75em 1em 1.75em;
+}
+
+.card p, b {
+    font-size: 15px;
+}
+
+.card h1 {
+    margin-top: 1.5em;
+    font-size: 2.25em;
+}
+
+.div-neon-button {
+    margin-bottom: 1.5em;
 }
 
 /*Footer design*/
@@ -167,24 +189,52 @@ main {
     margin-bottom: 0.5em;
     font-size: 1.5em;
 }
+
 .footer-style .group1 .box-footer p {
     margin-bottom: 10px;
 }
 
-.footer-style .group2 {
+.group2 {
     background-color: #0a1a2a;
     padding: 15px 10px;
-    padding-bottom: 10px;
+    padding-bottom: 15px;
     text-align: center;
 }
 
-@media screen and (max-width:800px) {
+.copyright-footer b{
+    font-size: 12px;
+}
+
+@media screen and (max-width:875px) {
     /* Responsive design for navbar */
 
     /* Responsive design for main */
+    body {
+        background-image: url(/Images/background-mobile-loading.svg);
+    }
+
+    main p, b {
+        font-size: 14px;
+    }
+
     .main-content {
         margin-left: 2em;
         margin-right: 2em;
+    }
+
+    /* Responsive design for cards*/
+    .cards {
+        display: grid;
+        grid-template-columns: auto;
+        max-width: 85rem;
+    }
+    
+    .card p, b {
+        font-size: 13px;
+    }
+
+    .card h1 {
+        font-size: 1.75em;
     }
 
     /* Responsive design for footer */
@@ -195,4 +245,4 @@ main {
         padding: 45px 0px;
         text-align: left;
     }
-    }
+}
